# renderer

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.zed/: debug.json
app/: Cargo.toml  build.rs
app/src/: app.rs  egui_widgets.rs  lib.rs  main.rs
assets/shaders/: brdf.comp.glsl  cubemap.frag.glsl  cubemap.vert.glsl  cull.comp.glsl  depth_reduce.comp.glsl  egui.frag.glsl  egui.vert.glsl  filter_envmap.frag.glsl  fullscreen_triangle.vert.glsl  grid.frag.glsl  grid.inc.glsl  grid.vert.glsl  math.inc.glsl  mesh.inc.glsl  shader.frag.glsl  shader.mesh.glsl  shader.task.glsl  shading.frag.glsl  utils.inc.glsl
bake/: Cargo.toml
bake/src/: brdf.rs  cubemaps.rs  image_utils.rs  main.rs  ptto_converter.rs
lava/: Cargo.toml
lava/src/: device.rs  errors.rs  gpu_stats.rs  lib.rs  logger.rs  macros.rs  pipelines.rs  program.rs  resources.rs  shaders.rs  swapchain.rs  utils.rs
renderer/: Cargo.toml
renderer/src/: lib.rs  math.rs  renderer.rs
renderer/src/renderer/: acceleration_sturct_utils.rs  egui_integration.rs  image_loader.rs  pass.rs  render_graph.rs
scenery/: Cargo.toml
scenery/src/: camera.rs  lib.rs  mesh.rs  scene.rs  vertex.rs
