[package]
name = "bake"
version = "0.1.0"
edition = "2024"

[dependencies]
lava = { path = "../lava" }
ktxvulkan-sys = { git = "ssh://git@github.com/yznya/ktxvulkan-sys.git" }
scenery = { path = "../scenery" }
renderer = { path = "../renderer" }

ash = "0.38.0"
anyhow = "1.0.98"
bytemuck = "1.23.1"
gpu-allocator = { version = "0.27.0", features = ["vulkan"] }
glam = { version = "0.30.4", features = ["rand", "bytemuck"] }
exr = "1.73.0"
png = "0.17.16"
image = "0.25.6"
log = "0.4.27"
pretty_env_logger = "0.5.0"
rkyv = { version = "0.8.10" }
clap = { version = "4.5.41", features = ["derive"] }
