[package]
name = "renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
ash = "0.38.0"
ddsfile = "0.5.2"
egui = "0.31.1"
egui-winit = "0.31.1"
egui_plot = "0.32.1"
tracy-client = "0.18.1"
winit = "0.30.11"
rayon = "1.10.0"
gpu-allocator = { version = "0.27.0", features = ["vulkan"] }
log = "0.4.27"
bytemuck = "1.23.1"
png = "0.17.16"
zune-jpeg = "0.4.17"
ktxvulkan-sys = { git = "ssh://git@github.com/yznya/ktxvulkan-sys.git" }
glam = { version = "0.30.4", features = ["bytemuck", "serde", "rand", "rkyv"] }
notify = "8.0.0"

lava = { path = "../lava" }
scenery = { path = "../scenery" }
